--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "ar-js-org": "git@github.com:AR-js-org/AR.js.git#90e83dc4003aa1980b242014b3ca054effed8edf",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "three": "^0.132.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
